0.12.44 September, 2024
- generated covers are now 1600x2400 to comply with Apple Books recommended minimum width and DP guidelines https://www.pgdp.net/wiki/DP_Official_Documentation:PP_and_PPV/Post-Processing_FAQ#Information_for_all_types_of_cover #234
- added accessibility metadata to EPUB3 content.ocf as suggested by ACE
- added aria labels and roles to nav elements of EPUB3 content.ocf and toc.xhtml
- added lang attribute to wrapper file html elements as suggested by ACE
- fix opengraph urls in HTYML metadata #235
- update cchardet to solve problems installing on python 3.11
- alt-text logging is restructured
    - empty alt-text warnings are now suppressed in figures
    - empty alt-text warnings are now suppressed when role='presentation' or aria-labelledby attributes are present
    - the alt text examination is moved from the Spider module to the HTMLParser module.
    - ids are assigned to all img elements to facilitate alt-text mitigation. 
    - alt-text logging is improved.
    - empty alt-text warnings now reference a newly add doc page.

0.12.43 May 22, 2024
- fixed chunker bugs:
    - no longer emits empty chunks (was happening with large child elements of body) #224
    - no longer splits elements in NEVER_SPLIT list when they are only children. #226
- fix missing empty line in txt output for copyrighted books #222
- made copyright addition in header/footer case-insensitive
- adds NFC unicode normalization to text parser #218
- libgutenberg 0.10.5
    - don't strip periods from title_no_subtitle